copyright text changed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
-# Created by Andrey Upadyshev aka Oliora.
-# This file was released to Public domain.
-
+# (c) 2013 Andrey Upadyshev aka oliora <oliora@gmail.com>.
+# File released to public domain.
 cmake_minimum_required(VERSION 2.8)
 
 project(clocks_test)
 
 if(MSVC)
     add_definitions(-D_SCL_SECURE_NO_WARNINGS)
+    
+    add_definitions(-DBOOST_ALL_NO_LIB) # Turn off Boost's auto-linking
+    set(Boost_USE_STATIC_LIBS ON)
 endif()
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
@@ -14,8 +16,6 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 endif()
 
 # Find Boost
-add_definitions(-DBOOST_ALL_NO_LIB) # Turn off Boost's auto-linking
-set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost 1.54 REQUIRED COMPONENTS chrono thread system)
 
 include_directories(${Boost_INCLUDE_DIRS})
